remove height from content

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
     .header,
     .content {
       display: flex;
-      height: 50vh;
       width: 100%;
       flex-direction: column;
       align-items: center;
       justify-content: center;
     }
 
-    .header { min-height: 300px; }
+    .header {
+      height: 50vh;
+      min-height: 300px;
+    }
     .content { justify-content: flex-start; }
 
     .header__slogan { font-size: 2rem; }
