--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </header>
 
   <main class="content">
-    <form>
+    <div>
       <select class="input" id="cb-select">
         <optgroup label="Basic">
           <option value="bounce">Bounce</option>
@@ -138,7 +138,7 @@
       <button class="input" id="cb-button" role="button">
         Animate!
       </button>
-    </form>
+    </div>
     <a class="text-link" href="https://github.com/jl-welch/cubounce" target="_blank">View project on Github</a>
   </main>
 
@@ -147,10 +147,7 @@
     const select = document.querySelector("#cb-select");
     const button = document.querySelector("#cb-button");
 
-    const event  = e => {
-      e.preventDefault();
-      cb("#cb").animate(select.value);
-    }
+    const event  = e => cb("#cb").animate(select.value);
 
     select.addEventListener("change", event);
     button.addEventListener("click", event)
